--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -1,10 +1,11 @@
 name: OccamO Bench
 on:
   pull_request:
+  workflow_dispatch:
 
 permissions:
-  actions: write
   contents: read
+  actions: read
 
 jobs:
   bench:
